# CarbonFootprint

./: CMakeLists.txt  INTRO.md  LICENSE  MANIFEST.in  README.md  build.bat  build.sh  pyproject.toml
carbon_tracker/: __init__.py  _version.py  activities.py  carbon_api.py  cli.py  forecast.py  globals.py  gui.py  hardware.py  models.py  power.py  project.py  tracker.py
include/: carbon_api.h  carbon_engine.h  daemon.h  globals.h  hardware_detect.h  platform.h  power_monitor.h  process_monitor.h  report.h  screen_monitor.h
src/: carbon_api.cpp  carbon_engine.cpp  daemon.cpp  hardware_detect.cpp  main.cpp  power_monitor.cpp  process_monitor.cpp  report.cpp  screen_monitor.cpp
