[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carbon-footprint-tracker"
version = "1.1.2"
description = "Track and compute the carbon footprint of your computer usage in real-time. Per-process energy monitoring, auto hardware detection, live grid carbon intensity, GUI, CLI, and project file management."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Jakub Giezgała", email = "kugibioinformatyk4@gmail.com"},
]
keywords = ["carbon", "footprint", "tracker", "energy", "green-computing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "psutil>=5.9.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
gui = [
    "PyQt5>=5.15.0",
]
dev = [
    "pytest>=7.0",
    "build>=0.10",
    "twine>=4.0",
]
all = [
    "carbon-footprint-tracker[gui,dev]",
]

[project.urls]
Homepage = "https://github.com/kugi8412/CarbonFootprint"
Documentation = "https://github.com/kugi8412/CarbonFootprint#readme"
Repository = "https://github.com/kugi8412/CarbonFootprint"
Issues = "https://github.com/kugi8412/CarbonFootprint/issues"

[project.scripts]
carbon-tracker = "carbon_tracker.cli:main"
carbon-tracker-gui = "carbon_tracker.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["carbon_tracker*"]

[tool.setuptools.package-data]
carbon_tracker = ["*.json", "*.exe", "carbon_tracker"]
